--- a/E-commerce-main/public/map.html
+++ b/E-commerce-main/public/map.html
@@ -8,12 +8,18 @@
             height: 500px;
             width: 100%;
         }
+        #back{
+            font-size: 20px;
+            font-family:fantasy;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
     <h1>Our branches</h1>
     <div id="map"></div>
     <script src="map.js"></script>
-    <li><a href="/home">Back</a></li>
+    <div id="back"> <a href="/home">Back</a></div>
+   
 </body>
 </html>
