--- a/E-commerce-main/public/map.html
+++ b/E-commerce-main/public/map.html
@@ -9,6 +9,11 @@
             width: 100%;
         }
         #back{
+            font-size: 15px;
+            font-family:fantasy;
+            text-align: center;
+        }
+        #header{
             font-size: 20px;
             font-family:fantasy;
             text-align: center;
@@ -16,10 +21,12 @@
     </style>
 </head>
 <body>
-    <h1>Our branches</h1>
+   <div id="header"> <h1>Visit Our Branches</h1></div>
+   <div id="back"> <a href="/home">Home Page</a></div>
+   <br>
     <div id="map"></div>
     <script src="map.js"></script>
-    <div id="back"> <a href="/home">Back</a></div>
+   
    
 </body>
 </html>
