addition to home

--- a/E-commerce-main/public/fq.html
+++ b/E-commerce-main/public/fq.html
@@ -1,87 +1,13 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FAQ - Yoga Products</title>
-    <style>
-  
-body, h1, h2, p {
-    margin: 0;
-    padding: 0;
-}
-
-
-body {
-    font-family:math;
-    line-height: 1.6;
-    background-color: #f4f4f4;
-    color: #333;
-}
-
-header {
-    background: #333;
-    color: #fff;
-    padding: 20px 0;
-    text-align: center;
-}
-
-header h1 {
-    margin: 0;
-    font-size: 2em;
-}
-
-main {
-    padding: 20px;
-}
-
-.faq {
-    max-width: 800px;
-    margin: 0 auto;
-    background: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-.faq-item {
-    margin-bottom: 15px;
-}
-
-.faq-item:last-child {
-    margin-bottom: 0;
-}
-
-.question {
-    font-size: 1.2em;
-    font-weight: bold;
-    color: #2c3e50;
-}
-
-.answer {
-    margin-top: 10px;
-    font-size: 1em;
-    color: #7f8c8d;
-}
-
-footer {
-    background: #333;
-    color: #fff;
-    text-align: center;
-    padding: 10px 0;
-    position: fixed;
-    width: 100%;
-    bottom: 0;
-}
-
-footer p {
-    margin: 0;
-}
-
-    </style>
-    <link rel="stylesheet" href="FAQ.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
     <header>
         <h1>SOULMAT FAQ</h1>
@@ -109,8 +35,10 @@ footer p {
                 <p class="answer">Discount codes cannot be used on items that are already on sale. Sale prices are final and cannot be combined with other promotions.</p>
             </div>
         </section>
+        <div class="back-button">
+            <a href="/menu">Home Page</a>
+        </div>
     </main>
-   
-<a href="/menu">Back</a>
 </body>
+
 </html>
