--- a/E-commerce-main/public/know.html
+++ b/E-commerce-main/public/know.html
@@ -4,50 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yoga Facts</title>
-    <style>
-        body {
-            font-family: math;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f0f0;
-            color: #333;
-        }
-        .container {
-            width: 80%;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-        h1 {
-            text-align: center;
-            color: #2c3e50;
-        }
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        li {
-            background-color: #ecf0f1;
-            margin: 10px 0;
-            padding: 10px;
-            border-radius: 5px;
-        }
-    </style>
+    <link rel="stylesheet" href="css/know.css">
 </head>
 <body>
-    <div class="container">
+    <header>
         <h1>Interesting Facts About Yoga</h1>
-        <ul>
-            <li>Yoga is an ancient practice that originated in India over 5,000 years ago.</li>
-            <li>The word "yoga" comes from Sanskrit and means "union" or "connection."</li>
-            <li>There are various styles of yoga, including Hatha Yoga, Vinyasa Yoga, Iyengar Yoga, Ashtanga Yoga, and more.</li>
-            <li>Practicing yoga can improve flexibility, strength, and balance.</li>
-            <li>Yoga is not just about physical postures; it also includes breath control, meditation, and ethical guidelines.</li>
-            <li>International Yoga Day is celebrated on June 21st each year.</li>
-            <li>Yoga has been shown to reduce stress, anxiety, and depression.</li>
-        </ul>
-    </div>
-    <a href="/menu">Back</a>
+    </header>
+    <main>
+        <section class="content">
+            <ul>
+                <li class="fact-item">Yoga is an ancient practice that originated in India over 5,000 years ago.</li>
+                <li class="fact-item">The word "yoga" comes from Sanskrit and means "union" or "connection."</li>
+                <li class="fact-item">There are various styles of yoga, including Hatha Yoga, Vinyasa Yoga, Iyengar Yoga, Ashtanga Yoga, and more.</li>
+                <li class="fact-item">Practicing yoga can improve flexibility, strength, and balance.</li>
+                <li class="fact-item">Yoga is not just about physical postures; it also includes breath control, meditation, and ethical guidelines.</li>
+                <li class="fact-item">International Yoga Day is celebrated on June 21st each year.</li>
+                <li class="fact-item">Yoga has been shown to reduce stress, anxiety, and depression.</li>
+            </ul>
+        </section>
+        <div class="back-button">
+            <a href="/menu">Home Page</a>
+        </div>
+    </main>
 </body>
 </html>
